--- a/jobjob.html
+++ b/jobjob.html
@@ -4,31 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Задачник</title>
-    <button onclick="save()">Сохранить мой ID</button>
+    <button>Сохранить мой ID</button>
 </head>
 <body>
-<script src="https://telegram.org/js/telegram-web-app.js"></script>
 <script>
-    // Шаг 1: Получаем user_id
-    const tg = window.Telegram.WebApp;
-    const user = tg.initDataUnsafe.user;
-    const userId = user.id;
-
-    // Шаг 2: Покажем его (для отладки)
-    console.log("Мой user_id:", userId);
-    alert("Твой ID: " + userId);
-
-    // Шаг 3: Отправляем на сервер
-    function save() {
-        // Эта функция будет отправлять userId на твой Python сервер
-        fetch('/save', {
-            method: 'POST',
-            body: JSON.stringify({user_id: userId})
-        });
-    }
 </script>
 </body>
 
 </html>
+
 
 
